--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ eggs/
 .eggs/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
@@ -137,7 +138,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-venv.cfg
+pyvenv.cfg
 lib64/
 
 # Spyder project settings
